Change % to code

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <h3>Speaking</h3>
             <p>
               Improve your English skills and confidence. Live classes and
-              interactive lessons online. 20% extra free for a limited time only
+              interactive lessons online. 20&#8453; extra free for a limited
+              time only
             </p>
             <p>
               Learn English online and improve your skills through our
