--- a/index.html
+++ b/index.html
@@ -5,210 +5,259 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Britlex</title>
-    <link rel="stylesheet" href="styles/style.css" />
     <meta name="Britlex" content="Language school" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
+    <!-- Header section -->
     <header>
-      <nav>
-        <a href=""><span>Brit</span><span>lex</span></a>
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#about-us">About Us</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li><a href="#contact-us">Contacts</a></li>
-        </ul>
-      </nav>
-      <button type="button">Let&#39;s Talk</button>
+      <div class="container flex-container">
+        <nav class="nav-flex">
+          <a class="link" href=""
+            ><span class="logo-first-part">Brit</span
+            ><span class="logo-second-part">lex</span></a
+          >
+          <ul class="list header-list-flex">
+            <li>
+              <a class="link list-item" href="./index.html" title="Home"
+                >Home</a
+              >
+            </li>
+            <li><a class="link list-item" href="#skills">Skills</a></li>
+            <li><a class="link list-item" href="#about-us">About Us</a></li>
+            <li><a class="link list-item" href="#pricing">Pricing</a></li>
+            <li><a class="link list-item" href="#contact-us">Contacts</a></li>
+          </ul>
+        </nav>
+        <button class="header-button" type="button">Let&#39;s Talk</button>
+      </div>
     </header>
     <main>
-      <section>
-        <h1>Learn Any Foreign Language</h1>
-        <p>
-          With our teachers who write a program for each student, you will be
-          able to make your first sketch after the first lesson.
-        </p>
-        <button type="button">Get started</button>
-        <img
-          src="./media/learning-languages.png"
-          alt="learning languages"
-          width="654"
-          height="510"
-        />
+      <!-- Hero section -->
+      <section class="hero">
+        <div class="container hero-flex">
+          <div class="hero-main-cont">
+            <h1 class="hero-heading">Learn Any Foreign Language</h1>
+            <p class="hero-description">
+              With our teachers who write a program for each student, you will
+              be able to make your first sketch after the first lesson.
+            </p>
+            <button class="hero-button" type="button">Get started</button>
+          </div>
+          <img
+            src="./media/learning-languages.png"
+            alt="learning languages"
+            width="654"
+            height="510"
+          />
+        </div>
       </section>
       <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-          <li>
-            <img
-              src="./media/Shared-goals-bro1.png"
-              alt="shared goals bro"
-              width="390"
-              height="390"
-            />
-            <h3>Speaking</h3>
-            <p>
-              Improve your English skills and confidence. Live classes and
-              interactive lessons online. 20&#8453; extra free for a limited
-              time only
-            </p>
-            <p>
-              Learn English online and improve your skills through our
-              high-quality courses and resources – all designed for adult
-              language learners.
-            </p>
-            <a href="">Learn more</a>
-          </li>
-          <li>
-            <img
-              src="./media/Typewriter-bro1.png"
-              alt="type writer"
-              width="390"
-              height="264"
-            />
-            <h3>Writing</h3>
-            <p>
-              One of the most important and extensive areas of natural science,
-              the science that studies substances, also their composition
-            </p>
-            <a href="">Learn more</a>
-          </li>
-          <li>
-            <img
-              src="./media/Housebookshelves-bro1.png"
-              alt="book shelves"
-              width="390"
-              height="264"
-            />
-            <h3>Reading</h3>
-            <p>
-              Perception and response actions of the user resulting from the use
-              and/or upcoming use of the product, system or service
-            </p>
-            <a href="">Learn more</a>
-          </li>
-          <li>
-            <h3>Listening</h3>
-            <p>
-              Here you can find activities to practise your listening skills.
-              Listening will help you to improve your understanding
-            </p>
-            <a href="">Learn more</a>
-            <img
-              src="./media/Podcastaudience-bro1.png"
-              alt="Podcast"
-              width="408"
-              height="274"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="heading">Skills</h2>
+          <ul class="list">
+            <li class="skills-list-item">
+              <img
+                src="./media/Shared-goals-bro1.png"
+                alt="shared goals bro"
+                width="390"
+                height="390"
+              />
+              <h3 class="list-item-heading">Speaking</h3>
+              <p class="skills-description">
+                Improve your English skills and confidence. Live classes and
+                interactive lessons online. 20&#8453; extra free for a limited
+                time only
+              </p>
+              <p class="skills-description">
+                Learn English online and improve your skills through our
+                high-quality courses and resources – all designed for adult
+                language learners.
+              </p>
+              <a class="link skills-button" href="">Learn more</a>
+            </li>
+            <li class="skills-list-item">
+              <img
+                src="./media/Typewriter-bro1.png"
+                alt="type writer"
+                width="390"
+                height="264"
+              />
+              <h3 class="list-item-heading">Writing</h3>
+              <p class="skills-description">
+                One of the most important and extensive areas of natural
+                science, the science that studies substances, also their
+                composition
+              </p>
+              <a class="link skills-button-secondary" href="">Learn more</a>
+            </li>
+            <li class="skills-list-item">
+              <img
+                src="./media/Housebookshelves-bro1.png"
+                alt="book shelves"
+                width="390"
+                height="264"
+              />
+              <h3 class="list-item-heading">Reading</h3>
+              <p class="skills-description">
+                Perception and response actions of the user resulting from the
+                use and/or upcoming use of the product, system or service
+              </p>
+              <a class="link skills-button-secondary" href="">Learn more</a>
+            </li>
+            <li class="skills-list-item">
+              <h3 class="list-item-heading">Listening</h3>
+              <p class="skills-description">
+                Here you can find activities to practise your listening skills.
+                Listening will help you to improve your understanding
+              </p>
+              <a class="link skills-button-secondary" href="">Learn more</a>
+              <img
+                src="./media/Podcastaudience-bro1.png"
+                alt="Podcast"
+                width="408"
+                height="274"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section id="about-us">
-        <h2>About Us</h2>
-        <p>
-          The model offers a framework for discussing problems related to the
-          user's experience, as well as possible ways and means of solving them.
-          Application development begins at the top level (strategy), where the
-          future software product is described quite abstractly from the point
-          of view of the expectations of both users and the customer.
-        </p>
-        <ul>
-          <li>
-            <p>800</p>
-            <p>Pupils</p>
-          </li>
-          <li>
-            <p>18</p>
-            <p>Teachers</p>
-          </li>
-          <li>
-            <p>6</p>
-            <p>Foreign languages</p>
-          </li>
-        </ul>
-        <img
-          src="./media/Businesscompetition-bro1.png"
-          alt="Business competition"
-          width="540"
-          height="540"
-        />
+        <div class="container">
+          <h2 class="heading">About Us</h2>
+          <p class="about-description">
+            The model offers a framework for discussing problems related to the
+            user's experience, as well as possible ways and means of solving
+            them. Application development begins at the top level (strategy),
+            where the future software product is described quite abstractly from
+            the point of view of the expectations of both users and the
+            customer.
+          </p>
+          <ul class="list">
+            <li>
+              <p class="about-list-item">800</p>
+              <p>Pupils</p>
+            </li>
+            <li>
+              <p class="about-list-item">18</p>
+              <p>Teachers</p>
+            </li>
+            <li>
+              <p class="about-list-item">6</p>
+              <p>Foreign languages</p>
+            </li>
+          </ul>
+          <img
+            src="./media/Businesscompetition-bro1.png"
+            alt="Business competition"
+            width="540"
+            height="540"
+          />
+        </div>
       </section>
       <section id="pricing">
-        <h2>Pricing</h2>
-        <ul>
-          <li>
-            <img
-              src="./media/online.png"
-              alt="Online lesson"
-              width="426"
-              height="320"
-            />
-            <h3>Self-study online course</h3>
-            <p>
-              Start learning English online in live classes with qualified EC
-              teachers and students from all over the world.
-            </p>
-            <div>
-              <p>&#163;5.99</p>
-              <p>per month</p>
-            </div>
-          </li>
-          <li>
-            <img
-              src="./media/lesson.png"
-              alt="Lesson-with-good-friends"
-              width="426"
-              height="320"
-            />
-            <h3>Live online classes</h3>
-            <p>
-              Interactive group classes with expert teachers. Free 7-day trial
-            </p>
-            <div>
-              <p>&#163;12.99</p>
-              <p>per month</p>
-            </div>
-          </li>
-          <li>
-            <img
-              src="./media/webinar.png"
-              alt="Webinar lady"
-              width="426"
-              height="320"
-            />
-            <h3>Personal Tuition</h3>
-            <p>
-              Online one-to-one English tutoring – enjoy our first session for
-              only &#36;1
-            </p>
-            <div>
-              <p>&#163;12.99</p>
-              <p>per month</p>
-            </div>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="heading">Pricing</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./media/online.png"
+                alt="Online lesson"
+                width="426"
+                height="320"
+              />
+              <h3 class="list-item-heading pricing-list-heading">
+                Self-study online course
+              </h3>
+              <p>
+                Start learning English online in live classes with qualified EC
+                teachers and students from all over the world.
+              </p>
+              <div>
+                <p class="pricing-list-item">&#163;5.99</p>
+                <p class="pricing-per-month">per month</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./media/lesson.png"
+                alt="Lesson-with-good-friends"
+                width="426"
+                height="320"
+              />
+              <h3 class="list-item-heading pricing-list-heading">
+                Live online classes
+              </h3>
+              <p>
+                Interactive group classes with expert teachers. Free 7-day trial
+              </p>
+              <div>
+                <p class="pricing-list-item">&#163;12.99</p>
+                <p class="pricing-per-month">per month</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./media/webinar.png"
+                alt="Webinar lady"
+                width="426"
+                height="320"
+              />
+              <h3 class="list-item-heading pricing-list-heading">
+                Personal Tuition
+              </h3>
+              <p>
+                Online one-to-one English tutoring – enjoy our first session for
+                only &#36;1
+              </p>
+              <div>
+                <p class="pricing-list-item">&#163;12.99</p>
+                <p class="pricing-per-month">per month</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <section id="contact-us">
-        <img
-          src="./media/contact.png"
-          alt="Contact us"
-          width="425"
-          height="430"
-        />
-        <h2>Contact Us</h2>
-        <p>
-          Discover your current English level by taking our free online English
-          test. Sign up to our newsletter for learning tips and free resources
-        </p>
+        <div class="container">
+          <img
+            src="./media/contact.png"
+            alt="Contact us"
+            width="425"
+            height="430"
+          />
+          <h2 class="heading">Contact Us</h2>
+          <p>
+            Discover your current English level by taking our free online
+            English test. Sign up to our newsletter for learning tips and free
+            resources
+          </p>
+        </div>
       </section>
-      <footer>
-        <a href="./index.html"><span>Brit</span><span>lex</span></a>
-        <ul>
-          <li><a href="">Terms and Conditions</a></li>
-          <li><a href="">Privacy Policy</a></li>
-          <li><a href="">Cookie Policy</a></li>
-        </ul>
+      <footer class="footer">
+        <div class="container">
+          <a class="link" href="./index.html"
+            ><span class="logo-first-part">Brit</span
+            ><span class="logo-second-part">lex</span></a
+          >
+          <ul class="list">
+            <li>
+              <a class="link footer-list-item" href="">Terms and Conditions</a>
+            </li>
+            <li><a class="link footer-list-item" href="">Privacy Policy</a></li>
+            <li><a class="link footer-list-item" href="">Cookie Policy</a></li>
+          </ul>
+        </div>
       </footer>
     </main>
   </body>
