--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
       <section class="hero">
         <div class="container hero-flex">
           <div class="hero-main-cont">
-            <h1 class="hero-heading">Learn Any Foreign Language</h1>
+            <h1 class="hero-heading">
+              Learn <br />
+              Any Foreign Language
+            </h1>
             <p class="hero-description">
               With our teachers who write a program for each student, you will
               be able to make your first sketch after the first lesson.
@@ -74,12 +77,12 @@
                 height="390"
               />
               <h3 class="list-item-heading">Speaking</h3>
-              <p class="skills-description">
+              <p class="skills-description-speaking">
                 Improve your English skills and confidence. Live classes and
                 interactive lessons online. 20&#8453; extra free for a limited
                 time only
               </p>
-              <p class="skills-description">
+              <p class="skills-description-speaking-sp">
                 Learn English online and improve your skills through our
                 high-quality courses and resources – all designed for adult
                 language learners.
@@ -129,7 +132,7 @@
                 <li class="skills-list-item skills-item-listening">
                   <div class="skills-thumb">
                     <h3 class="list-item-heading">Listening</h3>
-                    <p class="skills-description">
+                    <p class="skills-description-listening">
                       Here you can find activities to practise your listening
                       skills. Listening will help you to improve your
                       understanding
