--- a/index.html
+++ b/index.html
@@ -180,16 +180,18 @@
               <h3 class="list-item-heading list-item-heading--margin">
                 Speaking
               </h3>
-              <p class="skills-description-speaking">
-                Improve your English skills and confidence. Live classes and
-                interactive lessons online. 20&#8453; extra free for a limited
-                time only
-              </p>
-              <p class="skills-description-speaking-sp">
-                Learn English online and improve your skills through our
-                high-quality courses and resources – all designed for adult
-                language learners.
-              </p>
+              <div>
+                <p class="skills-description-speaking">
+                  Improve your English skills and confidence. Live classes and
+                  interactive lessons online. 20&#8453; extra free for a limited
+                  time only
+                </p>
+                <p class="skills-description-speaking-sp">
+                  Learn English online and improve your skills through our
+                  high-quality courses and resources – all designed for adult
+                  language learners.
+                </p>
+              </div>
               <a class="link skills-button" href="">Learn more</a>
             </li>
             <li class="skills-list-item writing-item">
@@ -249,7 +251,7 @@
               <a class="link skills-button-secondary" href="">Learn more</a>
             </li>
             <li class="skills-list-item reading-item">
-              <picture>
+              <picture class="reading-pic">
                 <source
                   srcset="
                     ./media/desktop/Housebookshelves-bro1-390.png 390w,
@@ -304,15 +306,7 @@
               <a class="link skills-button-secondary" href="">Learn more</a>
             </li>
             <li class="skills-list-item skills-item-listening">
-              <div class="skills-thumb">
-                <h3 class="list-item-heading">Listening</h3>
-                <p class="skills-description-listening">
-                  Here you can find activities to practise your listening
-                  skills. Listening will help you to improve your understanding
-                </p>
-                <a class="link skills-button-secondary" href="">Learn more</a>
-              </div>
-              <picture>
+              <picture class="listerning-pic">
                 <source
                   srcset="
                     ./media/desktop/Podcastaudience-bro1-408.png 408w,
@@ -357,6 +351,16 @@
                   alt="Podcast"
                 />
               </picture>
+              <div class="skills-thumb">
+                <h3 class="list-item-heading list-item-heading--none">
+                  Listening
+                </h3>
+                <p class="skills-description-listening">
+                  Here you can find activities to practise your listening
+                  skills. Listening will help you to improve your understanding
+                </p>
+                <a class="link skills-button-secondary" href="">Learn more</a>
+              </div>
             </li>
           </ul>
         </div>
